# voli

./: .dockerignore  .env.deploy.example  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  LICENSE  README.md  config.example.yaml  docker-compose.yml  mkdocs.yml  pyproject.toml  todo.md
.devcontainer/: devcontainer.json
agent/: README.md
api/: README.md
docker/: Dockerfile  docker-compose.yml
docs/: agent_flow.md  dev.md  index.md  metrics_definitions.md  prompt_corpus_v1.jsonl  reproducibility.md  requirements.md  usage.md  v1_contract.md
docs/architecture/: caching.md  data-model.md  guardrails.md  orchestrator.md
docs/cli/: overview.md  themes.md  troubleshooting.md
docs/contributing/: release.md  setup.md  testing.md
docs/deploy/: digitalocean.md  poking.html  serving-claude-and-chatgpt.md
docs/eval/: adding-cases.md  dataset-format.md  harness.md  llm-eval.md
docs/examples/: batch.md  chain.md  greeks.md  llm-ask.md  mcp.md  plotting.md  recipes.md  refusals.md  replay.md  skeptic.md  skew.md  term-structure.md
docs/extending/: data-providers.md  llm-providers.md
docs/getting-started/: concepts.md  first-query.md  installation.md
docs/notebooks/: part4_cache_walkthrough.ipynb  part4_replay_and_trace_walkthrough.ipynb  part5_analytics_walkthrough.ipynb
docs/python-api/: agent.md  analytics.md  answer-question.md  tools.md
eval/: llm_prompts.jsonl  prompts.jsonl  run_eval.py  run_llm_eval.py
examples/yfinance_provider/: README.md  pyproject.toml
examples/yfinance_provider/tests/: test_yfinance_provider.py
examples/yfinance_provider/voli_yfinance/: __init__.py  provider.py
infra/: README.md
schemas/: tools.v1.json
scripts/: generate_schemas.py  smoke_test.py
src/oqe/: cache.py  cli.py  cli_render.py  config.py  logging.py  mcp_server.py  models.py  plot.py  replay.py  run_trace.py  tool_schemas.py
src/oqe/agent/: __init__.py  batch.py  executor.py  state.py  writer.py
src/oqe/analytics/: __init__.py  greeks.py  iv_metrics.py  metrics_bundle.py  protocols.py  skew.py
src/oqe/eval/: __init__.py  llm_runner.py  runner.py  synth_market.py
src/oqe/llm/: __init__.py  agent.py  analytics_tools.py  anthropic_provider.py  openai_provider.py  prompts.py  provider.py  replay.py  skeptic.py  tools.py
src/oqe/polygon/: client.py  http.py  normalise.py  tools.py
src/oqe/tools/: polygon_tools.py
src/voli/: cache.py  cli.py  cli_render.py  config.py  logging.py  mcp_server.py  models.py  replay.py  run_trace.py  tool_schemas.py
src/voli/agent/: __init__.py  executor.py  planner.py  skeptic.py  state.py
src/voli/analytics/: __init__.py  iv_metrics.py  metrics_bundle.py  protocols.py
src/voli/eval/: llm_runner.py  runner.py  synth_market.py
src/voli/llm/: __init__.py  agent.py  analytics_tools.py  anthropic_provider.py  openai_provider.py  prompts.py  provider.py  replay.py  skeptic.py  tools.py  types.py
src/voli/polygon/: client.py  helpers.py  http.py  normalise.py  tools.py
src/voli/providers/: __init__.py  polygon.py
src/voli/server/: __init__.py  auth.py  mcp_http.py  openapi.py  rest.py
src/voli/tools/: polygon_tools.py
tests/: conftest.py  test_agent_end_to_end.py  test_agent_planner.py  test_agent_writer.py  test_analytics_bundle.py  test_analytics_bundle_spread_filter.py  test_analytics_metrics.py  test_atm_greeks.py  test_atm_tie_break.py  test_batch.py  test_cache.py  test_cache_marker.py  test_cli.py  test_cli_render.py  test_delta_skew.py  test_end_to_end.py  test_llm.py  test_llm_analytics.py  test_llm_eval.py  test_llm_replay.py  test_llm_skeptic.py  test_mcp_server.py  test_mid_price_flags.py  test_models_mid_compute.py  test_plot.py  test_polygon_news.py  test_polygon_normalise.py  test_polygon_tools.py  test_replay.py  test_run_trace.py  test_server_app.py  test_server_mcp_http.py  test_server_openapi.py  test_server_rest.py  test_skeptic.py  test_skew_spread_filter.py  test_term_structure_spread_filter.py  test_themes.py  test_tool_cache_greeks.py  test_tool_cache_quotes.py  (+4 more)
ui/: README.md
