[tool.ruff]
line-length = 100
target-version = "py311"
exclude = [
  ".git",
  ".venv",
  "__pycache__",
  "build",
  "dist",
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.poetry]
name = "options-query-agent"
version = "0.1.0"
description = "Options Chain Q&A Agent"
authors = ["Your Name <you@example.com>"]
packages = [{ include = "oqe", from = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.0"
httpx = "^0.28.1"
python-dotenv = "^1.2.2"
pyyaml = "^6.0.3"
matplotlib = {version = "^3.10.9", optional = true}

[tool.poetry.extras]
# Install with: poetry install -E plot
# Enables `oqe ask --plot out.png` and the oqe.plot module.
plot = ["matplotlib"]

[tool.poetry.scripts]
oqe = "oqe.cli:main"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
ipykernel = "^7.1.0"
jupyter = "^1.1.1"


[tool.poetry.group.docs.dependencies]
mkdocs = "^1.6.1"
mkdocs-material = "^9.7.6"
pymdown-extensions = "^10.21.2"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"
