[tool.ruff]
line-length = 100
target-version = "py311"
exclude = [
  ".git",
  ".venv",
  "__pycache__",
  "build",
  "dist",
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.poetry]
name = "voli"
version = "0.1.0"
description = "Voli — grounded Q&A and analytics over equity option chains."
authors = ["Your Name <you@example.com>"]
packages = [{ include = "voli", from = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.0"
httpx = "^0.28.1"
python-dotenv = "^1.2.2"
pyyaml = "^6.0.3"
matplotlib = {version = "^3.10.9", optional = true}
anthropic = {version = "^0.98.1", optional = true}
openai = {version = "^2.34.0", optional = true}
mcp = {version = "^1.27.0", optional = true}

[tool.poetry.extras]
# Install with: poetry install -E plot
# Enables `voli ask --plot out.png` and the voli.plot module.
plot = ["matplotlib"]

# LLM-driven agent (voli llm-ask). Pick one provider or both.
#   poetry install -E anthropic
#   poetry install -E openai
#   poetry install -E llm        # both
anthropic = ["anthropic"]
openai = ["openai"]
llm = ["anthropic", "openai"]

# MCP server so Claude Desktop / claude.ai web can call Voli tools mid-conversation.
#   poetry install -E mcp
mcp = ["mcp"]

[tool.poetry.scripts]
voli = "voli.cli:main"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
ipykernel = "^7.1.0"
jupyter = "^1.1.1"


[tool.poetry.group.docs.dependencies]
mkdocs = "^1.6.1"
mkdocs-material = "^9.7.6"
pymdown-extensions = "^10.21.2"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"
